# IS3107_Group_16

./: .gcloudignore  .gitignore  Dockerfile  LICENSE  README.md  deployment.md  docker-compose.yml  pipeline.uml  pyproject.toml  requirements.txt
kubernetes/: fernet-example.yaml  override-values-example.yaml
src/dags/common/: bigquery_utils.py  gcs_utils.py  proxy.py
src/dags/nft_data_retrieval/: get_nfts.py  get_price_history.py  get_tweets.py
src/dags/nft_data_retrieval/tasks/: nft.py
src/dags/price_prediction/: model.py  predict_price.py  train_model.py
src/dags/sentiment_analysis/: sentiment_analysis.py
